# -- Project metadata --

[project]
name = "evo-hl-library"
version = "0.1.0"
description = "Shared reusable library for Evolutek robots"
requires-python = ">=3.14"


# -- Dependencies --

dependencies = [
    "pydantic>=2.0",
    "colorama>=0.4.6"
]

# -- Optional dependency groups --

[project.optional-dependencies]
# Hardware libs for Raspberry Pi (and any blinka-supported SBC).
# Install on the robot: uv sync --extra rpi
rpi = [
    "adafruit-blinka>=8.0",
    "gpiod>=2.0",
    "rplidar-roboticia>=0.9",
]

# -- Development dependencies --

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

# -- Build system --

# uv_build: fast build backend integrated with uv
# https://docs.astral.sh/uv/concepts/build-backend/
[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

# -- Build configuration --

# Tell uv where the source code lives (src/ layout).
[tool.uv.build-backend]
module-name = "evo_lib"
module-root = "src"

# -- Pytest configuration --

[tool.pytest.ini_options]
testpaths = ["tests"]

# -- Ruff configuration --
# Linter + formatter. Replaces flake8, isort, black.
# Run: uv run ruff check . && uv run ruff format .

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "T201"]
# E = pycodestyle errors, F = pyflakes, I = isort, W = warnings, T201 = no print()
